--- a/shuffler.html
+++ b/shuffler.html
@@ -6,9 +6,9 @@
       <img src="img/doritos.svg" class="doritos-logo"><img src="img/bingo.jpg" class="bingo-logo">
     </div>
     <div class="card">
-      <div class="drawn gummy-drawn">HI</div>
-      <div class="drawn doritos-drawn">HELLO</div>
-      <input type="button" value="Draw Them Gummy Doritos">
+      <div class="drawn gummi-drawn"></div>
+      <div class="drawn doritos-drawn"></div>
+      <input class="shuffle" type="button" value="Shuffle Them Gummi Doritos">
     </div>
   </div>
   <script src="./shuffler.js"></script>
